# policonnect

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  INSTALL  README  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  policonnect.desktop  policonnect.qrc  ui_mainwindow.h
cmake/modules/: InstallSettings.cmake
helper/: CMakeLists.txt  it.polimi.policonnect.policy  it.polimi.policonnecthelper.conf  it.polimi.policonnecthelper.service.in  it.polimi.policonnecthelper.xml  policonnecthelper.cpp  policonnecthelper.h
icons/: CMakeLists.txt
worker/: CMakeLists.txt  main.cpp  policonnecthelper.cpp  policonnecthelper.h
