INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/polimi-16.png
              ${CMAKE_CURRENT_SOURCE_DIR}/polimi-32.png
	      ${CMAKE_CURRENT_SOURCE_DIR}/polimi-64.png
              ${CMAKE_CURRENT_SOURCE_DIR}/polimi-96.png
              ${CMAKE_CURRENT_SOURCE_DIR}/polimi-128.png
	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/pixmaps)
